--- a/Część 1 - Podstawy języka/Python/Python 1.ipynb
+++ b/Część 1 - Podstawy języka/Python/Python 1.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ![interpretowany](https://cdn.tproger.ru/wp-content/uploads/2016/12/concepts2mini.png)"
+    " ![interpretowany](https://miro.medium.com/max/3000/1*3Iy-ohRRXj3lChmEbQTxIQ.png)"
    ]
   },
   {
@@ -143,12 +143,13 @@
    "metadata": {},
    "source": [
     "**C++**\n",
-    "*<br>\n",
+    "<br>\n",
     "int a = 2;\n",
     "<br>\n",
     "char b = 'L'; //76 w kodzie Ascii\n",
     "<br>\n",
-    "int c = a + b;*"
+    "int c = a + b;\n",
+    "\n"
    ]
   },
   {
@@ -784,7 +785,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![slices](https://cdn.instructables.com/FXZ/KIBJ/IF7IS4P0/FXZKIBJIF7IS4P0.LARGE.jpg?auto=webp&frame=1&width=320)"
+    "![slices](https://p0.pikist.com/photos/154/195/pizza-slice-of-pizza-slice-ham-cheese-top-view-motherboard-good-food-fast-food.jpg)"
    ]
   },
   {
@@ -796,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -805,53 +806,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'slice'> slice(2, 5, 1)\n",
-      "[3, 5, 7]\n",
-      "[3, 5, 7]\n",
+      "<class 'slice'> slice(1, 3, 1)\n",
+      "[2, 3]\n",
+      "[2, 3]\n",
       "[1, 2, 3, 5, 7]\n"
      ]
     }
    ],
    "source": [
     "l = [1, 2, 3, 5, 7]\n",
-    "sl = slice(2, 5, 1)\n",
+    "sl = slice(1, 3, 1)\n",
     "\n",
     "print(type(sl), sl)\n",
     "print(l[sl])\n",
-    "print(l[2:5:1]) \n",
+    "print(l[1:3:1]) \n",
     "print(l)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n",
-      "[7]\n",
-      "==========================================================================\n",
       "[7, 5, 3, 2, 1]\n",
       "[1, 3, 7]\n",
       "[1, 2, 3]\n",
-      "[2, 5]\n"
+      "[2, 5]\n",
+      "==========================================================================\n",
+      "7\n",
+      "[7]\n"
      ]
     }
    ],
    "source": [
-    "print(l[-1])     #ostatni element\n",
-    "print(l[-1:])    #ostatni element, ale ...\n",
-    "\n",
-    "print(\"==========================================================================\")\n",
-    "\n",
     "print(l[::-1])  # odwrotna kolejność\n",
     "print(l[::2])   # elelemty z indeksami parzystymi\n",
     "print(l[:-2])   # cała sekwencja poza ostatnimi dwoma elementami \n",
-    "print(l[1::2]) # elementy z indeksami nieparzystymi\n"
+    "print(l[1::2]) # elementy z indeksami nieparzystymi\n",
+    "\n",
+    "print(\"==========================================================================\")\n",
+    "\n",
+    "print(l[-1])     #ostatni element\n",
+    "print(l[-1:])    #ostatni element, ale ...\n"
    ]
   },
   {
@@ -965,13 +966,6 @@
    "metadata": {},
    "source": [
     "## Tuple - krotki"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![tuple](https://i.ytimg.com/vi/wI4vuDLWZos/hqdefault.jpg)"
    ]
   },
   {
@@ -1290,7 +1284,7 @@
     "## Logiczne\n",
     "* and \tzwraca wartość True, jeśli obie instrukcje są prawdziwe\tx < 5 and  x < 10\t\n",
     "* or\tzwraca wartość True, jeśli jedno z wyrażeń jest prawdziwe\tx < 5 or x < 4\t\n",
-    "* not\todwraca wynik, zwraca False, jeśli wynik jest prawdziwy(x < 5 and x < 10)"
+    "* not\todwraca wynik, zwraca False, jeśli wynik jest prawdziwy not (x < 5 and x < 10)"
    ]
   },
   {
@@ -2877,7 +2871,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
