--- a/Część 2 - Formatowanie danych/Python/warsztaty.ipynb
+++ b/Część 2 - Formatowanie danych/Python/warsztaty.ipynb
@@ -24,10 +24,10 @@
    "source": [
     "## Forma Warsztatów\n",
     "* Blok numpy 50 minut\n",
-    "* Przerwa 15 minut \n",
-    "* Blok pandas 55 minut\n",
+    "* Zadania + Przerwa\n",
+    "* Blok pandas 50 minut\n",
     "\n",
-    "Każdy blok ma w środku 5 minutowe zadanko i jest zakończony 2 zadaniami których zrobienie powinno zająć max 15 minut. "
+    "Każdy blok ma w środku 5 minutowe zadanko i jest zakończony 2 zadaniami których zrobienie powinno zająć max 10 minut. "
    ]
   },
   {
@@ -784,6 +784,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1222,7 +1229,6 @@
     "    #=======================================Twoj kod=======================================\n",
     "\n",
     "\n",
-    "\n",
     "    #======================================================================================\n",
     "    \n",
     "    return out"
@@ -1253,11 +1259,11 @@
    "metadata": {},
    "source": [
     "### Zadanie 2 \n",
-    "Majac funkcje `dzialanie2` uzupelnij kod tak, aby przy danych listach A i B (o wymiarach (20,)) konwertowal je do macierzy która ma 4 rzędy i 5 kolumn, a nastepnie stworzyc macierz ktora powstala w nastepujacy sposob: \n",
-    "1. Kolumna `a` o indeksie 2 jest mnożna przez sumę wiersza `b` o indeksie 3. \n",
-    "2. Kolumna `a` o indeksie 3 zamieniona jest przez kolumne `b` o indeksie 4 pomnozona przez -1.\n",
-    "3. Macierz powstałą z kroków 1 oraz 2 nazywamy C.\n",
-    "4. Co drugi wiersz macierzy (poczynając od pierwszego) jest mnożony przez 2 "
+    "Majac funkcje `dzialanie2` uzupelnij kod tak, aby przy danych listach  `A` i `B`(o wymiarach (20,)) konwertowal je do macierzy która ma 4 rzędy i 5 kolumn, a nastepnie stworzyc macierz ktora powstala w nastepujacy sposob: \n",
+    "1. Kolumna `A` o indeksie 2 jest mnożna przez sumę wiersza `B` o indeksie 3. \n",
+    "2. Kolumna `A` o indeksie 3 zamieniona jest przez kolumne `B` o indeksie 4 pomnozona przez -1.\n",
+    "3. Macierz powstałą z kroków 1 oraz 2 nazywamy `C`.\n",
+    "4. Co drugi wiersz macierzy `C` jest mnożony przez 2 "
    ]
   },
   {
@@ -2266,14 +2272,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Zadanie 2\n",
     "\n",
+    "\n",
     "Odpowiedz na pytanie: \n",
-    "Jakie typy gier sprzedają się sumarycznie lepiej w Japonii niż w pozostałych obszarach świata? "
+    "Jakie typy gier sprzedają się średnio lepiej w Japonii niż w Europie? Jakie to typy gier i jaka jest ta wartość średnia. Wynikem powinna być tabelka posortowana względem średnich. Nazwij kolumny `Typ Gry` i `Średnia sprzedaż w Japonii`"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
